# bitfield

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
bit_field/: __init__.py  __main__.py  cli.py  jsonml_stringify.py  render.py  tspan.py
bit_field/test/: alpha.json  render_report.py  test_basic.py  test_render.py
