[metadata]
name = bit_field
version = 1.0.0
author = Arthur Gay
description = A bitfield diagram renderer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Arth-ur/bitfield
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = bitfield, bytefield, diagram, renderer, svg
license = MIT

[options]
packages = bit_field

[options.extras_require]
JSON5 = json5>=0.9.6

[options.entry_points]
console_scripts =
    bit_field = bit_field.cli:bit_field_cli
